--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
     volumes:
       - "pgdata:/var/lib/postgresql/data/"
 
-  redis:
-    image: "redis:alpine"
+#  redis:
+#    image: "redis:alpine"
 
   rabbit:
     hostname: rabbit
@@ -41,7 +41,8 @@ services:
 
   django:
     build: ./
-    command: "python3 manage.py runserver 0.0.0.0:8000"
+    command: "daphne -b 0.0.0.0 -p 8000 WorkForce.asgi:application"
+    # command: "python manage.py runserver 0.0.0.0:8000"
     container_name: WorkForce
     entrypoint: /workforce/entrypoint.sh
     depends_on:
@@ -84,7 +85,7 @@ services:
       - .:/workforce
     depends_on:
       - postgres
-      - redis
+      #- redis
       - rabbit
       - django
 
@@ -95,7 +96,7 @@ services:
       - .:/workforce
     depends_on:
       - postgres
-      - redis
+      #- redis
       - rabbit
       - django
 
