--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,58 @@
-Django==2.2
-djangorestframework==3.9.3
+amqp==2.5.2
+asgiref==3.2.3
+attrs==19.3.0
+autobahn==19.11.1
+Automat==0.8.0
+billiard==3.6.1.0
+celery==4.3.0
+certifi==2019.9.11
+cffi==1.13.2
+chardet==3.0.4
+constantly==15.1.0
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==2.8
+daphne==2.4.0
+Django==3.0
+django-celery-results==1.1.2
+django-rest-swagger==2.2.0
+djangorestframework==3.11.0
+drf-yasg==1.17.0
 gunicorn==19.9.0
+hyperlink==19.0.0
+idna==2.8
+importlib-metadata==0.23
+incremental==17.5.0
+inflection==0.3.1
+itypes==1.1.0
+Jinja2==2.10.3
+kombu==4.6.6
+MarkupSafe==1.1.1
+more-itertools==8.0.0
+openapi-codec==1.3.2
+packaging==19.2
 pep8==1.7.1
 Pillow==6.0.0
 psycopg2-binary==2.8.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
+pycparser==2.19
+PyHamcrest==1.9.0
+pyOpenSSL==19.1.0
+pyparsing==2.4.5
 pytz==2019.1
-sqlparse==0.3.0
-drf-yasg==1.17.0
-celery==4.3.0
 redis==3.3.11
+requests==2.22.0
+ruamel.yaml==0.16.5
+ruamel.yaml.clib==0.2.0
+service-identity==18.1.0
+simplejson==3.16.0
+six==1.13.0
+sqlparse==0.3.0
+Twisted==19.10.0
+txaio==18.8.1
+uritemplate==3.0.0
+urllib3==1.25.7
+vine==1.3.0
+zipp==0.6.0
+zope.interface==4.7.1
