docker swarm deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,22 +40,24 @@ services:
       - "5673:5672"
 
   django:
-    build: ./
+    #build: ./
+    image: samuira/python_img:tution_mastor
     command: "daphne -b 0.0.0.0 -p 8000 WorkForce.asgi:application"
     # command: "python manage.py runserver 0.0.0.0:8000"
-    container_name: WorkForce
-    entrypoint: /workforce/entrypoint.sh
+    #container_name: WorkForce
+    entrypoint: /backend/entrypoint.sh
     depends_on:
       - postgres
     ports:
       - "8000:8000"
     volumes:
-      - ".:/workforce"
+      - ".:/backend"
 
   client:
-    build:
-      context: ./angular-tution-mastor/
-      dockerfile: ./Dockerfile
+    # build:
+    #   context: ./angular-tution-mastor/
+    #   dockerfile: ./Dockerfile
+    image: samuira/angular_img:tution_mastor
     entrypoint: ./entrypoint.sh
     command: ["ng", "serve","--host", "0.0.0.0"]
     ports:
@@ -64,25 +66,27 @@ services:
       - "./angular-tution-mastor:/usr/src/app"
 
   nginx:
-    build:
-      context: ./nginx/
-      dockerfile: ./Dockerfile
+    # build:
+    #   context: ./nginx/
+    #   dockerfile: ./Dockerfile
+    image: samuira/nginx_img:tution_mastor
     restart: always
     ports:
       - "8089:80"
     volumes:
       - "./angular-tution-mastor/dist:/usr/src/app/dist"
       - "./nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
-      - ".:/workforce"
+      - ".:/backend"
     depends_on:
       - django
       - client
 
   celery:
-    build: ./
+    #build: ./
+    image: samuira/python_img:tution_mastor
     command: celery -A WorkForce worker -l info
     volumes:
-      - .:/workforce
+      - .:/backend
     depends_on:
       - postgres
       #- redis
@@ -90,10 +94,11 @@ services:
       - django
 
   celery-beat:
-    build: ./
+    #build: ./
+    image: samuira/python_img:tution_mastor
     command: celery -A WorkForce beat --pidfile= -l info
     volumes:
-      - .:/workforce
+      - .:/backend
     depends_on:
       - postgres
       #- redis
