--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 upstream WorkForce {  
     ip_hash;
-    server WorkForce:8000;
+    server django:8000;
 }
 
 server {
@@ -12,12 +12,12 @@ server {
 
     location /static {
         autoindex on;
-        alias /workforce/static;
+        alias /backend/static;
     }
 
     location /media {
         autoindex on;
-        alias /workforce/media;
+        alias /backend/media;
     }
 
     location /cadmin {
